#3 add mesh example

--- a/examples/shapes/wrapper/package_info.yaml
+++ b/examples/shapes/wrapper/package_info.yaml
@@ -19,3 +19,8 @@ modules:
   - name: Shape
   - name: Cuboid
   - name: Rectangle
+- name: mesh
+  source_locations: 
+  classes: 
+  - name: Mesh
+  
