--- a/examples/shapes/wrapper/package_info.yaml
+++ b/examples/shapes/wrapper/package_info.yaml
@@ -2,25 +2,26 @@ name: pyshapes # Unique name prepended to all modules
 smart_ptr_type: std::shared_ptr
 template_substitutions:
   - signature: <unsigned DIM>
-    replacement: [[2], [3]]   
+    replacement: [[2], [3]]
+  - signature: <unsigned ELEMENT_DIM, unsigned SPACE_DIM=ELEMENT_DIM>
+    replacement: [[2, 2], [3, 3]]
 
 modules:
-- name: math_funcs # Name of the module
-  source_locations: # Only use decls with hpp files found in these directories. Leave blank for 'cppwg_ALL'
-  classes: # Classes to include. Blank means none, cppwg_ALL means any found
-  free_functions: cppwg_ALL # Free functions to include. Blank means none, cppwg_ALL means any found
-- name: geometry
-  source_locations: 
-  classes: 
-  - name: Point
-- name: primitives
-  source_locations: 
-  classes: 
-  - name: Shape
-  - name: Cuboid
-  - name: Rectangle
-- name: mesh
-  source_locations: 
-  classes: 
-  - name: Mesh
-  
+  - name: math_funcs # Name of the module
+    source_locations: # Only use decls with hpp files found in these directories. Leave blank for 'cppwg_ALL'
+    classes: # Classes to include. Blank means none, cppwg_ALL means any found
+    free_functions: cppwg_ALL # Free functions to include. Blank means none, cppwg_ALL means any found
+  - name: geometry
+    source_locations:
+    classes:
+      - name: Point
+  - name: primitives
+    source_locations:
+    classes:
+      - name: Shape
+      - name: Cuboid
+      - name: Rectangle
+  - name: mesh
+    source_locations:
+    classes:
+      - name: Mesh
