--- a/examples/shapes/wrapper/package_info.yaml
+++ b/examples/shapes/wrapper/package_info.yaml
@@ -24,4 +24,5 @@ modules:
   - name: mesh
     source_locations:
     classes:
-      - name: Mesh
+      - name: AbstractMesh
+      - name: ConcreteMesh
