#50 Fix example extern src

--- a/examples/shapes/CMakeLists.txt
+++ b/examples/shapes/CMakeLists.txt
@@ -16,6 +16,9 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(pybind11)
 
+# Add external library
+add_subdirectory(extern/meshgen meshgen_build)
+
 # Add a shared library for the main C++ source
 file(GLOB_RECURSE SHAPES_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 add_library(shapes SHARED ${SHAPES_SOURCES})
@@ -27,8 +30,8 @@ target_include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/src/math_funcs
     ${CMAKE_CURRENT_SOURCE_DIR}/src/mesh
     ${CMAKE_CURRENT_SOURCE_DIR}/src/primitives
-    ${CMAKE_CURRENT_SOURCE_DIR}/extern/meshgen
 )
+target_link_libraries(shapes PUBLIC meshgen::meshgen)
 
 # Copy the Python source and test trees to the build location
 file(
