--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,10 @@ authors = [
 license = { file = "LICENSE" }
 keywords = ["C++", "Python", "Pybind11"]
 readme = "README.md"
-version = "0.0.1-alpha"
+version = "0.2.1"
 
 classifiers = [
-  "Development Status :: 3 - Alpha",
+  "Development Status :: 4 - Beta",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Operating System :: MacOS :: MacOS X",
