--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -42,17 +42,17 @@ jobs:
         run: python -m flake8
 
       - name: Test wrapper generation
-        run: python -m unittest tests/test_shapes.py
+        run: python -m unittest tests/test_wrapper_generation.py
 
       - name: Generate new wrappers
         run: |
           cd examples/shapes/wrapper
           rm -rf geometry math_funcs primitives
           cd ..
-          cppwg src/ \
+          cppwg src/cpp \
             --wrapper_root wrapper/ \
             --package_info wrapper/package_info.yaml \
-            --includes src/*/ extern/*/ \
+            --includes src/cpp/*/ extern/*/ \
             --std c++17 \
             --logfile cppwg.log
 
