--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 license = { file = "LICENSE" }
 keywords = ["C++", "Python", "Pybind11"]
 readme = "README.md"
-version = "0.2.1"
+version = "0.3.1"
 
 classifiers = [
   "Development Status :: 4 - Beta",
@@ -48,8 +48,7 @@ Repository = "https://github.com/Chaste/cppwg/"
 target-version = ["py38", "py39", "py310", "py311", "py312"]
 extend-exclude = """
 (
-  ^/examples/shapes/wrapper/pybind11/
-  | ^/cppwg/templates/
+  ^/cppwg/templates/
 )
 """
 
