--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -42,7 +42,7 @@ jobs:
         run: python -m flake8
 
       - name: Test wrapper generation
-        run: python -m unittest tests/test_wrapper_generation.py
+        run: python -m unittest test/test_wrapper_generation.py
 
       - name: Generate new wrappers
         run: |
@@ -52,7 +52,7 @@ jobs:
           cppwg src/cpp \
             --wrapper_root wrapper/ \
             --package_info wrapper/package_info.yaml \
-            --includes src/cpp/*/ extern/*/ \
+            --includes src/cpp/*/ \
             --std c++17 \
             --logfile cppwg.log
 
