#20 Simplify cells example build

--- a/examples/cells/CMakeLists.txt
+++ b/examples/cells/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.16...3.22)
-project(cells LANGUAGES CXX)
+project(pycells LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find Python
-find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+# Find pybind11
+find_package(pybind11 CONFIG REQUIRED)
 
 # Find VTK
 find_package(VTK 7.1
@@ -36,49 +36,27 @@ find_package(VTK 7.1
         vtkWrappingPythonCore
 )
 
-# Fetch pybind11
-include(FetchContent)
-FetchContent_Declare(
-    pybind11
-    GIT_REPOSITORY https://github.com/pybind/pybind11
-    GIT_TAG v2.13.5
-    GIT_SHALLOW 1
-)
-FetchContent_MakeAvailable(pybind11)
-
 # Add external library
 add_subdirectory(extern/meshgen meshgen_build)
 
-# Add a shared library for the main C++ source
-file(GLOB_RECURSE CELLS_SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/*.hpp
+# Set up pycells module
+file(GLOB SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/**/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/**/*.hpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/**/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/**/*.hpp
 )
-add_library(cells SHARED ${CELLS_SOURCES})
-target_include_directories(
-    cells
-    PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/mesh
-)
-target_link_libraries(cells PUBLIC meshgen::meshgen)
 
-# Set up Pybind11 module
-file(GLOB PYCELLS_SOURCES 
-    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/lib/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/lib/*.hpp
-)
-pybind11_add_module(_pycells_lib MODULE ${PYCELLS_SOURCES})
-target_link_libraries(
-    _pycells_lib
-    PRIVATE
-    cells
-)
+pybind11_add_module(_pycells_lib ${SOURCES})
+
 target_include_directories(
     _pycells_lib
     PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/wrappers/lib
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/mesh
 )
 
-# Add install target for scikit-build
-install(TARGETS cells DESTINATION .)
+target_link_libraries(_pycells_lib PUBLIC meshgen::meshgen)
+
+install(TARGETS _pycells_lib LIBRARY DESTINATION pycells)
