--- a/examples/shapes/CMakeLists.txt
+++ b/examples/shapes/CMakeLists.txt
@@ -34,7 +34,7 @@ file(
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/
 )
 file(
-    COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/py/test/
+    COPY ${CMAKE_CURRENT_SOURCE_DIR}/src/py/tests/
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/
 )
 
