--- a/examples/cells/CMakeLists.txt
+++ b/examples/cells/CMakeLists.txt
@@ -4,41 +4,27 @@ project(pycells LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+# Find Python
+find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
+
 # Find pybind11
 find_package(pybind11 CONFIG REQUIRED)
 
 # Find VTK
-find_package(VTK 7.1
-    REQUIRED
-    COMPONENTS
-        vtkCommonCore
-        vtkCommonDataModel
-        vtkFiltersCore
-        vtkFiltersGeneral
-        vtkFiltersGeneric
-        vtkFiltersGeometry
-        vtkFiltersModeling
-        vtkFiltersProgrammable
-        vtkFiltersSources
-        vtkFiltersVerdict
-        vtkInteractionStyle
-        vtkIOCore
-        vtkIOGeometry
-        vtkIOImage
-        vtkIOLegacy
-        vtkIOMovie
-        vtkIOParallelXML
-        vtkIOXML
-        vtkPython
-        vtkRenderingAnnotation
-        vtkRenderingCore
-        vtkRenderingFreeType
-        vtkRenderingOpenGL2
-        vtkWrappingPythonCore
+find_package(VTK REQUIRED COMPONENTS
+    vtkCommonCore
+    vtkRenderingCore
+    vtkRenderingOpenGL2
+    vtkWrappingPythonCore
 )
 
-# Add external library
-add_subdirectory(thirdparty/meshgen meshgen_build)
+# Find PETSc
+find_package(PETSc REQUIRED)
+
+# Find MPI
+find_package(MPI REQUIRED COMPONENTS CXX)
 
 # Set up pycells module
 file(GLOB SOURCES
@@ -57,12 +43,22 @@ target_include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/cell
     ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/mesh
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/utils
     ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/visualization
-    ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/meshgen
     ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/smtk
     ${VTK_INCLUDE_DIRS}
+    ${PETSC_INCLUDES}
+    ${MPI_C_INCLUDE_PATH}
+    ${MPI_CXX_INCLUDE_PATH}
 )
 
-target_link_libraries(_pycells_lib PUBLIC meshgen::meshgen ${VTK_LIBRARIES})
+target_link_libraries(
+    _pycells_lib
+    PUBLIC
+    ${VTK_LIBRARIES}
+    ${PETSC_LIBRARIES}
+    ${MPI_C_LIBRARIES}
+    ${MPI_CXX_LIBRARIES}
+)
 
 install(TARGETS _pycells_lib LIBRARY DESTINATION pycells)
