--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -26,18 +26,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update && \
-          sudo apt-get install \
-            cmake \
-            libpetsc-real3.15 \
-            libpetsc-real3.15-dbg \
-            libpetsc-real3.15-dev \
-            libvtk9-dev \
-            mpi-default-bin \
-            mpi-default-dev \
-            python3-mpi4py \
-            python3-petsc4py-real3.15 \
-            python3-vtk9 \
-            vtk9
+          sudo apt-get install cmake
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
@@ -52,10 +41,10 @@ jobs:
       - name: Lint with flake8
         run: python -m flake8
 
-      - name: Test wrapper generation
+      - name: Test shapes example wrapper generation
         run: python -m unittest tests/test_wrapper_generation.py
 
-      - name: Generate new wrappers
+      - name: Regenerate shapes example wrappers
         run: |
           cd examples/shapes/wrapper
           rm -rf geometry math_funcs primitives
@@ -67,7 +56,7 @@ jobs:
             --std c++17 \
             --logfile cppwg.log
 
-      - name: Check for new classes
+      - name: Check shapes example for new classes
         run: |
           cd examples/shapes
           cat cppwg.log | grep "Unknown class"
@@ -80,16 +69,8 @@ jobs:
           cmake ..
           make -j $(nproc)
 
-      - name: Build cells example
-        run: |
-          pip install --user --no-cache -v examples/cells
-
       - name: Test shapes example
         run: |
           cd examples/shapes/build
           python -m unittest test_functions.py
           python -m unittest test_classes.py
-
-      - name: Test cells example
-        run: |
-          python -m unittest discover examples/cells/tests
