--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -39,7 +39,9 @@ jobs:
           pip install .[dev]
 
       - name: Lint with flake8
-        run: python -m flake8
+        run: |
+          python -m flake8 --version
+          python -m flake8 .
 
       - name: Test shapes example wrapper generation
         run: python -m unittest tests/test_wrapper_generation.py
