--- a/examples/cells/CMakeLists.txt
+++ b/examples/cells/CMakeLists.txt
@@ -29,41 +29,43 @@ find_package(PETSc4py REQUIRED)
 # Find MPI
 find_package(MPI REQUIRED COMPONENTS CXX)
 
-# Set up pycells module
-file(GLOB SOURCES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/**/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/**/*.hpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/**/*.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/**/*.hpp
+# Add a shared library target for the main C++ source
+file(GLOB_RECURSE MAIN_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/*.hpp
 )
-
-pybind11_add_module(_pycells_all ${SOURCES})
-
-target_include_directories(
-    _pycells_all
-    PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/wrappers/lib
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/cell
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/mesh
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/utils
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/visualization
-    ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/dolfinx
-    ${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/smtk
-    ${VTK_INCLUDE_DIRS}
-    ${PETSC_INCLUDES}
-    ${PETSC4PY_INCLUDES}
-    ${MPI_C_INCLUDE_PATH}
-    ${MPI_CXX_INCLUDE_PATH}
-)
-
-target_link_libraries(
-    _pycells_all
-    PUBLIC
+add_library(cells SHARED ${MAIN_SOURCES})
+target_link_libraries(cells PUBLIC
     ${VTK_LIBRARIES}
     ${PETSC_LIBRARIES}
     ${MPI_C_LIBRARIES}
     ${MPI_CXX_LIBRARIES}
 )
+target_include_directories(cells PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/cell
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/mesh
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/utils
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/cpp/visualization
+    ${VTK_INCLUDE_DIRS}
+    ${PETSC_INCLUDES}
+    ${MPI_C_INCLUDE_PATH}
+    ${MPI_CXX_INCLUDE_PATH}
+)
 
-install(TARGETS _pycells_all LIBRARY DESTINATION pycells)
+# Set up pycells module
+file(GLOB WRAPPER_SOURCES
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/all/*.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/all/*.hpp
+)
+pybind11_add_module(_pycells_all MODULE ${WRAPPER_SOURCES})
+target_link_libraries(_pycells_all PUBLIC cells)
+target_include_directories(_pycells_all PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/all
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/thirdparty/dolfinx
+    ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/thirdparty/smtk
+    ${PETSC4PY_INCLUDES}
+)
+
+# Install target for scikit-build
+install(TARGETS _pycells_all LIBRARY DESTINATION .)
