#20 Split main and wrapper libs in cells example

--- a/examples/cells/CMakeLists.txt
+++ b/examples/cells/CMakeLists.txt
@@ -9,9 +9,6 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 # Find Python
 find_package(Python3 REQUIRED COMPONENTS Interpreter Development)
 
-# Find pybind11
-find_package(pybind11 CONFIG REQUIRED)
-
 # Find VTK
 find_package(VTK REQUIRED COMPONENTS
     vtkCommonCore
@@ -28,6 +25,15 @@ find_package(PETSc4py REQUIRED)
 
 # Find MPI
 find_package(MPI REQUIRED COMPONENTS CXX)
+
+# Fetch pybind11
+include(FetchContent)
+FetchContent_Declare(
+  pybind11
+  URL https://github.com/pybind/pybind11/archive/refs/tags/v2.10.4.tar.gz
+  URL_HASH SHA256=832e2f309c57da9c1e6d4542dedd34b24e4192ecb4d62f6f4866a737454c9970
+)
+FetchContent_MakeAvailable(pybind11)
 
 # Add a shared library target for the main C++ source
 file(GLOB_RECURSE MAIN_SOURCES
@@ -53,19 +59,28 @@ target_include_directories(cells PUBLIC
     ${MPI_CXX_INCLUDE_PATH}
 )
 
-# Set up pycells module
+# Set up the pycells module with pybind11
 file(GLOB WRAPPER_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/all/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/all/*.hpp
 )
 pybind11_add_module(_pycells_all MODULE ${WRAPPER_SOURCES})
-target_link_libraries(_pycells_all PUBLIC cells)
-target_include_directories(_pycells_all PUBLIC
+target_link_libraries(_pycells_all PRIVATE cells)
+target_include_directories(_pycells_all PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/wrappers/all
     ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/thirdparty/dolfinx
     ${CMAKE_CURRENT_SOURCE_DIR}/dynamic/thirdparty/smtk
     ${PETSC4PY_INCLUDES}
 )
 
-# Install target for scikit-build
-install(TARGETS _pycells_all LIBRARY DESTINATION .)
+# Add install targets for scikit-build
+if(SKBUILD)
+    set_target_properties(_pycells_all PROPERTIES
+        SKIP_BUILD_RPATH FALSE
+        BUILD_WITH_INSTALL_RPATH FALSE
+        INSTALL_RPATH_USE_LINK_PATH TRUE
+        INSTALL_RPATH $ORIGIN
+    )
+    install(TARGETS cells LIBRARY DESTINATION .)
+    install(TARGETS _pycells_all LIBRARY DESTINATION .)
+endif()
