--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,9 +49,10 @@ target-version = ["py38", "py39", "py310", "py311", "py312"]
 extend-exclude = """
 (
   ^/cppwg/templates/
+  | _skbuild/
 )
 """
 
 [tool.isort]
 profile = "black"
-extend_skip_glob = ["examples/shapes/wrapper/pybind11/*"]
+extend_skip = ["_skbuild"]
