--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    executable-name = cppwg.__main__:main
+    cppwg = cppwg.__main__:main
 
 [options.extras_require]
 dev =
