--- a/.github/workflows/test-shapes.yml
+++ b/.github/workflows/test-shapes.yml
@@ -1,4 +1,4 @@
-name: build-and-test
+name: test-shapes
 
 on:
   workflow_dispatch:
@@ -7,16 +7,16 @@ on:
       - "**"
 
 jobs:
-  build-and-test:
+  test-shapes:
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     concurrency:
-      group: build-and-test-${{ github.ref }}-${{ matrix.python-version }}
+      group: test-shapes-${{ github.ref }}-${{ matrix.python-version }}
       cancel-in-progress: true
 
     steps:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update && \
+          sudo apt-get update
           sudo apt-get install cmake
 
       - name: Setup Python ${{ matrix.python-version }}
@@ -36,43 +36,37 @@ jobs:
       - name: Install cppwg
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          python -m pip install .
 
-      - name: Lint with flake8
+      - name: Regenerate wrappers
         run: |
-          python -m flake8 --version
-          python -m flake8 .
-
-      - name: Test shapes example wrapper generation
-        run: python -m unittest tests/test_wrapper_generation.py
-
-      - name: Regenerate shapes example wrappers
-        run: |
-          cd examples/shapes/wrapper
-          rm -rf geometry math_funcs primitives
-          cd ..
+          rm -rf wrapper/*/
           cppwg src/cpp \
             --wrapper_root wrapper/ \
             --package_info wrapper/package_info.yaml \
             --includes src/cpp/*/ \
             --std c++17 \
             --logfile cppwg.log
+        working-directory: examples/shapes
 
-      - name: Check shapes example for new classes
+      - name: Check for changes
         run: |
-          cd examples/shapes
-          cat cppwg.log | grep "Unknown class"
+          git diff --exit-code wrapper
+          grep "Unknown class" cppwg.log
+        working-directory: examples/shapes
 
-      - name: Build shapes example
+      - name: Configure
         run: |
-          cd examples/shapes
-          mkdir build
-          cd build
+          mkdir build && cd build
           cmake ..
-          make -j $(nproc)
+        working-directory: examples/shapes
 
-      - name: Test shapes example
+      - name: Build
+        run: make -j $(nproc)
+        working-directory: examples/shapes/build
+
+      - name: Test
         run: |
-          cd examples/shapes/build
           python -m unittest test_functions.py
           python -m unittest test_classes.py
+        working-directory: examples/shapes/build
