--- a/.github/workflows/test-cells.yml
+++ b/.github/workflows/test-cells.yml
@@ -19,6 +19,10 @@ jobs:
       group: test-cells-${{ github.ref }}-${{ matrix.python-version }}
       cancel-in-progress: true
 
+    defaults:
+      run:
+        shell: bash -el {0} # -l needed to activate conda
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
