--- a/.github/workflows/test-cells.yml
+++ b/.github/workflows/test-cells.yml
@@ -37,7 +37,6 @@ jobs:
         with:
           auto-update-conda: true
           use-mamba: true
-          miniforge-variant: Mambaforge
           miniforge-version: latest
           python-version: ${{ matrix.python-version }}
           activate-environment: test_cells
@@ -80,7 +79,7 @@ jobs:
         working-directory: examples/cells
 
       - name: Build
-        run: pip install --user --no-cache-dir -v .
+        run: python -m pip install -v .
         working-directory: examples/cells
 
       - name: Test
