--- a/.github/workflows/test-shapes-pip.yml
+++ b/.github/workflows/test-shapes-pip.yml
@@ -1,4 +1,4 @@
-name: test-shapes
+name: test-shapes-pip
 
 on:
   workflow_dispatch:
@@ -7,7 +7,7 @@ on:
       - "**"
 
 jobs:
-  test-shapes:
+  test-shapes-pip:
     runs-on: ubuntu-latest
 
     strategy:
@@ -16,7 +16,7 @@ jobs:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     concurrency:
-      group: test-shapes-${{ github.ref }}-${{ matrix.python-version }}
+      group: test-shapes-pip-${{ github.ref }}-${{ matrix.python-version }}
       cancel-in-progress: true
 
     steps:
@@ -26,7 +26,7 @@ jobs:
       - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install cmake
+          sudo apt-get install cmake git
 
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
