--- a/.github/workflows/test-cells-ubuntu.yml
+++ b/.github/workflows/test-cells-ubuntu.yml
@@ -64,5 +64,5 @@ jobs:
         working-directory: examples/cells
 
       - name: Test
-        run: python -m unittest discover -s tests
+        run: python -m unittest discover tests
         working-directory: examples/cells
