--- a/.github/workflows/test-cells-conda.yml
+++ b/.github/workflows/test-cells-conda.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     concurrency:
       group: test-cells-conda-${{ github.ref }}-${{ matrix.python-version }}
@@ -77,7 +77,7 @@ jobs:
         working-directory: examples/cells
 
       - name: Install conda-build tools
-        run: mamba install boa conda-verify
+        run: mamba install boa conda-build conda-verify
 
       - name: Build
         run: conda mambabuild recipe -m variants/python${{ matrix.python-version }}.yaml
