#20 Add ublas typecaster to cells

--- a/.github/workflows/test-cells-conda.yml
+++ b/.github/workflows/test-cells-conda.yml
@@ -47,7 +47,7 @@ jobs:
           python -m pip install .
 
       - name: Install requirements
-        run: mamba install --yes --file requirements.txt
+        run: mamba install --yes --file conda/requirements.txt
         working-directory: examples/cells
 
       - name: Set config paths
