#20 Test on ubuntu noble

--- a/.github/workflows/test-cells-conda.yml
+++ b/.github/workflows/test-cells-conda.yml
@@ -40,6 +40,7 @@ jobs:
           miniforge-version: latest
           python-version: ${{ matrix.python-version }}
           channels: conda-forge
+          conda-remove-defaults: "true"
 
       - name: Install cppwg
         run: |
