--- a/.github/workflows/test-cells-conda.yml
+++ b/.github/workflows/test-cells-conda.yml
@@ -39,8 +39,8 @@ jobs:
           use-mamba: true
           miniforge-version: latest
           python-version: ${{ matrix.python-version }}
-          channels: conda-forge
-          conda-remove-defaults: "true"
+          channels: conda-forge,defaults
+          conda-remove-defaults: "false"
 
       - name: Install cppwg
         run: |
