#20 Fix cppwg pipx install

--- a/.github/workflows/test-cells-ubuntu.yml
+++ b/.github/workflows/test-cells-ubuntu.yml
@@ -62,7 +62,7 @@ jobs:
           pipx ensurepath
 
       - name: Install cppwg
-        run: pipx install .
+        run: pipx install .  --include-deps
 
       - name: Configure
         run: |
